<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">听说</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="todo">todo</string>
    <string name="post_hint">请输入发布内容</string>
    <string name="auction">拍卖</string>
    <string name="my">我</string>
    <string name="testcontent">清朝末年，闽西各县文人前往汀州应试。武平一文人带去</string>

</resources>
