<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_full_bright"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dip" >

        <com.listen.say.view.base.RoundNetImageView
            android:id="@+id/avatar"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_margin="10dip"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_item_avatar" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/avatar"
            android:text="@string/my"
            android:textColor="@color/text_color_normal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="right|center_vertical" >

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:text="@string/hello_world"
                android:textColor="@color/text_color_sub" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testcontent"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:textColor="@color/text_color_normal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical"
        android:layout_marginBottom="10dip" >

        <TextView
            android:id="@+id/reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:textSize="12sp"
            android:text="@string/hello_world"
            android:textColor="@color/base_theme_color" />
    </RelativeLayout>

</LinearLayout>