<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:background="@drawable/popup_full_bright">
	
    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/thumb"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:src="@drawable/bg_item_auction" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/thumb"
        android:layout_toRightOf="@id/thumb"
        android:layout_marginLeft="5dip"
        android:orientation="vertical" >
        
        <TextView 
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_normal"
            android:textSize="15sp"
            android:text="@string/hello_world"/>
        
        <TextView 
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_sub"
            android:textSize="12sp"
            android:text="@string/post_hint"/>
        
        <TextView 
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_sub"
            android:textSize="12sp"
            android:text="@string/hello_world"/>
         <TextView 
            android:id="@+id/lefttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_sub"
            android:textSize="12sp"
            android:text="@string/hello_world"
            android:layout_marginBottom="5dip"/>
    </LinearLayout>
    
    <ImageView 
        android:id="@+id/handup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_auction_up"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dip"
        android:contentDescription="@string/todo"/>

</RelativeLayout>